--- a/multi-form-frontend/src/App.css
+++ b/multi-form-frontend/src/App.css
@@ -29,7 +29,7 @@ margin: 0;
 }
 
 ::placeholder {
-font-family: "Ubuntu";
+/* font-family: "Ubuntu"; */
 color: hsl(231, 11%, 63%);
 font-size: 14px;
 font-weight: 500;
@@ -61,8 +61,9 @@ font-weight: 500;
 
 .image {
   object-fit: fill;
-  height: 75vh;
-  width: 20vw;
+  height: 100%;
+  background-size: cover;
+  width: 19vw;
   border-radius: 10px;
   background-repeat: no-repeat;
   background-image: url('./assets/bg-sidebar-desktop.svg');
@@ -120,7 +121,12 @@ font-weight: 500;
 
 /*  */
 input.invalid {
-  background-color: #ffdddd;
+  border: 1px solid hsl(354, 84%, 57%);
+}
+input[type="text"], input[type="number"], input[type="email"] {
+  font-size:14px;
+  font-weight: 600;
+  color: hsl(213, 96%, 18%);
 }
 
 /* Step 1 */
@@ -128,7 +134,17 @@ input.invalid {
 .personal-info {
   padding: 20px 90px;
   height: 60vh;
-  width: 36vw;
+  width: 30vw;
+}
+
+.personal-info-main > h2 {
+  font-weight: 700;
+  color: hsl(213, 96%, 18%);
+}
+
+.personal-info-main > p {
+  font-size: 13px;
+  color: hsl(231, 11%, 63%);
 }
 
 .input {
@@ -142,7 +158,7 @@ input.invalid {
 }
 
 .personal-info-form {
-  padding: 20px 0px;
+  padding: 10px 0px;
   display: flex;
   flex-direction: column;
 }
@@ -211,12 +227,17 @@ button:hover {
 
 .input-error {
   color: hsl(354, 84%, 57%);
-  font-weight: 500;
+  font-weight: 700;
   /* display: none; */
-  font-size: 1rem;
+  font-size: 14px;
 }
 
-.input-label, .input-error {
+.input-label {
+  margin-top: 10px;
+  color: hsl(213, 96%, 18%);
+}
+
+.input-error {
   margin-top: 10px;
 }
 
@@ -273,7 +294,7 @@ button:hover {
 }
 
 .card-info-title {
-  font-weight: 500;
+  font-weight: 700;
   color: hsl(213, 96%, 18%);
 }
 
@@ -293,10 +314,11 @@ button:hover {
 .month-year-btn {
   display: flex;
   justify-content: center;
-  width: 36vw;
+  width: 30vw;
   height: 8vh;
   align-items: center;
   gap: 20px;
+  margin-top: 20px;
   border-radius: 10px;
   background-color: hsl(217, 100%, 97%);
 }
@@ -363,6 +385,16 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.month-year-btn-text {
+  color: hsl(231, 11%, 63%);
+  font-weight: 600;
+}
+
+.month-year-btn-text-bold {
+  color: hsl(213, 96%, 18%);
+  font-weight: 600;
+}
+
 /* Step 3 */
 
 .add-ons {
@@ -377,7 +409,7 @@ input:checked + .slider:before {
   gap: 40px;
   padding: 0px 20px;
   align-items: center;
-  width: 33vw;
+  width: 27vw;
   height: 10vh;
   border-radius: 10px;
   border: 1px solid hsl(231, 11%, 63%);
@@ -386,7 +418,7 @@ input:checked + .slider:before {
 }
 
 .online-services:hover {
-background-color: hsl(217, 100%, 97%); 
+/* background-color: hsl(217, 100%, 97%);  */
 border: 1px solid hsl(228, 100%, 84%) 
 }
 
@@ -402,13 +434,13 @@ border: 1px solid hsl(228, 100%, 84%)
 }
 
 .addons-info-title {
-  font-size: medium;
+  font-size: 14px;
   font-weight: 700;
 }
 
 .addons-info-dec {
-  font-size: small;
-  font-weight: 700;
+  font-size: 14px;
+  font-weight: 500;
   color: hsl(231, 11%, 63%);
 }
 
@@ -421,7 +453,7 @@ border: 1px solid hsl(228, 100%, 84%)
 /* Step 4 */
 
 .final-section {
-  width: 36vw;
+  width: 30vw;
   height: 30vh;
   border-radius: 10px;
   background-color: hsl(217, 100%, 97%);
@@ -435,8 +467,8 @@ border: 1px solid hsl(228, 100%, 84%)
 }
 
 .change-tab-link {
-text-decoration: underline;
-color: hsl(231, 11%, 63%)
+  text-decoration: underline;
+  color: hsl(231, 11%, 63%);
 }
 
 .change-tab-link:hover {
@@ -447,6 +479,7 @@ color: hsl(243, 100%, 62%);
 
 .change-tab-title, .change-tab-price {
   font-weight: 700;
+  color: hsl(213, 96%, 18%);
 }
 
 .change-tab-price {
@@ -485,8 +518,8 @@ color: hsl(243, 100%, 62%);
 /* Thank you page*/
 
 .thank-you {
-  width: 50vw;
-  height: 70vh;
+  width: 46vw;
+  height: 75vh;
 }
 
 .thank-you-img img{
@@ -506,10 +539,10 @@ color: hsl(243, 100%, 62%);
 }
 
 .thank-you-msg span {
-padding: 0px 124px;
+  padding: 0px 68px;
 }
 
-.thank-you-msg h1 {
+.thank-you-msg h2 {
   color: hsl(213, 96%, 18%);
 }
 
